--- a/src/Smee.IO.Client/Smee.IO.Client.csproj
+++ b/src/Smee.IO.Client/Smee.IO.Client.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>preview</LangVersion>
     <Authors>Nordes Menard-Lamarre</Authors>
     <Company>HoNoSoFt</Company>
     <Version>0.0.1</Version>
